<resources>
    <string name="app_name">Fitness App</string>
    <string name="title">Fitness</string>
    <string name="search_bar_hint">Поиск</string>
    <string name="all">Все</string>

    <string name="workout_header">Тренировка</string>
    <string name="default_workout_title">Утренняя пробежка</string>
    <string name="default_duration">30 минут</string>
    <string name="default_type">Тренировка</string>
    <string name="about_workout_header">Описание тренировки</string>
    <string name="default_description">Идеальная пробежка для старта дня</string>
    <string name="start_workout">Начать тренировку</string>
    <string name="retry">Повторить</string>
    <string name="no_workouts_found">Тренировок не найдено</string>

    <string name="quality_auto">Авто</string>
    <string name="quality_240p">240p</string>
    <string name="quality_480p">480p</string>
    <string name="quality_720p">720p</string>
    <string name="quality_hd">HD</string>

    <string name="error_playback_failed">Не удалось воспроизвести видео</string>
    <string name="error_adaptive_only">У этого видео доступно только одно качество</string>
    <string name="error_unknown">Неизвестная ошибка</string>
    <string name="error_video_not_found">Видео для этой тренировки не найдено</string>
    <string name="error_video_load_failed">Не удалось загрузить видео</string>
    <string name="error_workouts_load_failed">Не удалось загрузить тренировки</string>

    <string name="type_cardio">Кардио</string>
    <string name="type_power">Силовые</string>
    <string name="type_stretch">Растяжка</string>

    <string name="description_placeholder">Описание отсутствует</string>
    <string name="duration_unknown">Длительность не указана</string>
    <plurals name="minutes">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>
</resources>